Added layout components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="container">
-    <app-header></app-header>
+    <app-top-container></app-top-container>
+    <app-bot-container></app-bot-container>
 </div>
