--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,4 +7,12 @@
 .container {
     max-width: 1300px;
     margin: 0 auto;
+    width: 99%;
+}
+
+#app-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
 }
