--- a/src/app/components/info-box/info-box.component.html
+++ b/src/app/components/info-box/info-box.component.html
@@ -1,1 +1,6 @@
-<p>info-box works!</p>
+<div>
+    <input type='text' id='location-search' placeholder='Location'>
+</div>
+<div id='details-box'>
+    details
+</div>
