--- a/src/app/components/top-container/top-container.component.html
+++ b/src/app/components/top-container/top-container.component.html
@@ -1,5 +1,5 @@
-<div>
-    <app-time-box></app-time-box>
-    <app-info-box></app-info-box>
-    <app-status-box></app-status-box>
+<div id='top-container'>
+    <app-time-box id='time-box'></app-time-box>
+    <app-info-box id='info-box'></app-info-box>
+    <app-status-box id='status-box'></app-status-box>
 </div>
