--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id='app-container' class="container">
     <app-top-container></app-top-container>
     <app-bot-container></app-bot-container>
 </div>
